# katsha-ngo-website

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/article/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/article/migrations/: 0001_initial.py  0002_article_location.py  0003_article_tags.py  0004_article_is_featured.py  0005_article_is_fundraise.py  0006_alter_article_tags.py
backend/core/: settings.py  urls.py
backend/legal/: admin.py  models.py  serializers.py  urls.py  views.py
backend/legal/migrations/: 0001_initial.py  0002_termsofuse.py
frontend/: next.config.ts  package-lock.json  package.json  sire  tailwind.config.ts
frontend/src/: config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AboutUs.tsx  AlwaysOnDisplay.tsx  AppSidebar.tsx  ArticleDetailCtn.tsx  ArticleWrapper.tsx  ArticlerHeader.tsx  CallToAction.tsx  ContactInfo.tsx  ContactUs.tsx  DonateCTA.tsx  EmptyState.tsx  FaQs.tsx  FadeInOutWrapper.tsx  FeatureTimeline.tsx  Footer.tsx  FullPageLoader.tsx  FundraiseProgress.tsx  GenericCarousel.tsx  Hero.tsx  HowToHelp.tsx  Icon.tsx  ImpactsToCommunity.tsx  JoinCommunity.tsx  JoinWhatsapp.tsx  Loader.tsx  LoadingSpinner.tsx  MakeUgandaBetter.tsx  MaxWidthWrapper.tsx  Networks.tsx  OurCoreValues.tsx  OurSponsor.tsx  OurTearm.tsx  PaginationBtn.tsx  Purpose.tsx  SectionHead.tsx  SimpleHero.tsx  SocialsContainer.tsx  Spinner.tsx  StatCounter.tsx  StatCounterSection.tsx  (+5 more)
frontend/src/hooks/: hook.ts  useArticles.tsx  useScrollToHash.tsx  useStore.ts
frontend/src/lib/: Provider.tsx  (+4 more)
(+86 files in other folders)
